Fix image preview and modal overflow (#59)

--- a/client/src/components/modals/Modal.css
+++ b/client/src/components/modals/Modal.css
@@ -14,6 +14,8 @@
 
 .content {
   width: 100%;
+  max-height: 100vh;
+  overflow-y: scroll;
 }
 
 @media screen and (min-width: 700px) {
